--- a/portfolio/amina.html
+++ b/portfolio/amina.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <!--favicon -->
         <!--css -->
+        <script src="https://kit.fontawesome.com/433d1c4f2e.js" crossorigin="anonymous"></script>
+
         <link rel="stylesheet"
               href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CRoboto:regular,500"
               media="all">
@@ -19,30 +21,37 @@
     <body>
     <!--    Bare de navigation-->
     <div class="w-container">
-        <nav class="navbar navbar-expand-md navbar-light ">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+        <nav class="navbar  navbar-expand-md navbar-light w-nav fixed-top">
+            <div class="container container-fluid ">
+                <button id="burg-icon" class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="navbar-toggler-icon"  ></i>
+
+                </button>
+                <button onclick="closeMenu()" id="close-icon"  class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="true" aria-label="Toggle navigation">
+                    <i class="fa-solid fa-xmark" id="close"> </i>
+
                 </button>
                 <div class="collapse navbar-collapse" id="navbar-toggler">
                     <a class="navbar-brand w-nav-brand" href="#">
                         <img src="../img/logo.png"  alt="logo" class="image">
                     </a>
-                    <ul class="navbar-nav d-flex justify-content-center align-items-center nav-menu w-nav-menu" >
+                    <ul id="menu-list" class="navbar-nav d-flex justify-content-center align-items-center nav-menu w-nav-menu" >
                         <li class="nav-item">
-                            <a class="nav-link w-nav-link " aria-current="page" href="#">About me</a>
+                            <a class="nav-link w-nav-link " aria-current="page" href="#about">About me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link w-nav-link" href="#">Resume</a>
+                            <a class="nav-link w-nav-link"  href="#skills" onclick="closeMenu()">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link w-nav-link"  href="#">Skills</a>
+                            <a class="nav-link w-nav-link" href="#resume">Resume</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link w-nav-link"  href="#portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link-copy w-nav-link"  href="#">Email me</a>
                         </li>
                     </ul>
-
                 </div>
             </div>
         </nav>
@@ -50,21 +59,272 @@
     </div>
 
     <!-- heros section -->
-    <section class="hero align-items-stretch">
+    <section class="hero align-items-stretch" id="hero">
+        <div class="container">
+
         <div class="flexbox hero-flexbox">
 
             <div class="left-block">
-                <h1 class="text">Hello, Welcome here</h1>
-                <h2 class="text">My name is Aminnatou BARRY, I am a Developer Ingenier</h2>
+                <div class="information">
+                    <h1 class="text">Hello! <br> Welcome here &#x1F642;</h1>
+                    <h2 class="text">My name is <em><strong style="font-size: 1.3rem" > Aminatou BARRY</strong></em></h2>
+                    <div  class="text-content" style=" ">
+                        <div class="normal-title text">I am a</div>
+                        <div class="change-text"></div>
+                    </div>
+                </div>
+                <div class="social">
+                    <div><i class="bi bi-linkedin"></i></div>
+                   <div><i class="bi bi-github" ></i></div>
+                </div>
+
             </div>
-            <div class="right-block">
+            <div class="right-block img-hero">
                 <img src="../img/profile.jpg" alt="profile">
             </div>
+        </div>
         </div>
 
     </section>
 
+    <!-- a propos de moi section -->
+    <section id="about" class="section about-me space-b-section">
+        <div class="container center"><h2 class="section-title">About me</h2>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero
+                vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
+                tristique posuere.</p>
+
+        </div>
+    </section>
+
+    <!--skills section-->
+    <div class="space-b-section">
+    <section id="skills" class="skills section section-bg ">
+        <div class="container container2">
+
+            <h2 class="section-title">Skills</h2>
+            <p class="paragraph">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+
+            <div class="row skills-content">
+
+                <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up">
+
+                    <div class="progress">
+                        <span class="skill">HTML <i class="val">100%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+                        </div>
+                    </div>
+
+                    <div class="progress">
+                        <span class="skill">CSS <i class="val">90%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+                        </div>
+                    </div>
+
+                    <div class="progress">
+                        <span class="skill">JavaScript <i class="val">75%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+
+                    <div class="progress">
+                        <span class="skill">PHP <i class="val">80%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+                        </div>
+                    </div>
+
+                    <div class="progress">
+                        <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+                        </div>
+                    </div>
+
+                    <div class="progress">
+                        <span class="skill">Photoshop <i class="val">55%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    </div>
+
+    <!-- Resume section -->
+    <section id="resume" class="space-b-section section resume">
+        <div class="container container2">
+
+            <h2 class="section-title">Resume</h2>
+            <p class="paragraph">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+
+            <div class="row">
+                <div class="col-lg-6" data-aos="fade-up">
+                    <h3 class="resume-title">Education</h3>
+                    <div class="resume-item">
+                        <h4>Master of Fine Arts &amp; Graphic Design</h4>
+                        <h5>2015 - 2016</h5>
+                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
+                        <h5>2010 - 2014</h5>
+                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                    </div>
+                    <h3 class="resume-title">Professional Experience</h3>
+                    <div class="resume-item">
+                        <h4>Senior graphic design specialist</h4>
+                        <h5>2019 - Present</h5>
+                        <p><em>Experion, New York, NY </em></p>
+                        <ul>
+                            <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+                            <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                        </ul>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Graphic design specialist</h4>
+                        <h5>2017 - 2018</h5>
+                        <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                        <ul>
+                            <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                            <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="d-flex flex-column align-items-center">
+                        <img class="rounded p-4" alt="CV" src="assets/img/cv.png"/>
+                        <button class=" btn btn-dark" style="width: fit-content;"> Download PDF format</button>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- portfolio -->
+
+    <div class="space-b-section">
+         <section id="portfolio" class="portfolio section section-bg">
+            <div class="container">
+                <h2 class="section-title">Portfolio</h2>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
+                        <div class="layer">
+                            <h3> Cluedo App</h3>
+                            <p>This app simulate the famous Cluedo society game. Spring Boot with JAVAFX </p>
+                            <a class="more-info"><i class="fa-solid fa-info"></i></a>
+                            <div class="work-info" >
+                                <div class="work-info-content">
+                                    <i class="fa-solid fa-circle-xmark work-info-close"></i>
+                                    <h2 class="work-info-title">Cluedo App</h2>
+                                    <ul class="work-info-list grid">
+                                        <li class="work-info-list-item">
+                                            This project is an academic project, done by 4 students.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Front : JavaFX.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Back : Spring boot project with Rest Api.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Proxy : to link the back to the front (Gateway with Java HttpRequest).
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            DB : docker-compose pull a mongoDb image.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
+                        <div class="layer">
+                            <h3> Cluedo App. Academic Project</h3>
+                            <p>This app simulate the famous Cluedo society game. Spring Boot with JAVAFX </p>
+                            <a href=""><i class="fa-solid fa-info more-info"></i></a>
+                            <div class="work-info" >
+                                <div class="work-info-content">
+                                    <i class="fa-solid fa-circle-xmark work-info-close"></i>
+                                    <h2 class="work-info-title">Cluedo App</h2>
+                                    <ul class="work-info-list grid">
+                                        <li class="work-info-list-item">
+                                            This project is an academic project, done by 4 students.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Front : JavaFX.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Back : Spring boot project with Rest Api.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Proxy : to link the back to the front (Gateway with Java HttpRequest).
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            DB : docker-compose pull a mongoDb image.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="assets/img/portfolio/portfolio-4.jpg" alt=""/>
+                        <div class="layer">
+                            <h3> Cluedo App. Academic Project</h3>
+                            <p>This app simulate the famous Cluedo society game </p>
+                            <a href=""><i class="fa-solid fa-info"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="assets/img/portfolio/portfolio-5.jpg" alt=""/>
+                        <div class="layer">
+                            <h3> Cluedo App. Academic Project</h3>
+                            <p>This app simulate the famous Cluedo society game </p>
+                            <a href=""><i class="fa-solid fa-info"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="assets/img/portfolio/portfolio-6.jpg" alt=""/>
+                        <div class="layer">
+                            <h3> Cluedo App. Academic Project</h3>
+                            <p>This app simulate the famous Cluedo society game </p>
+                            <a href=""><i class="fa-solid fa-info"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="assets/img/portfolio/portfolio-7.jpg" alt=""/>
+                        <div class="layer">
+                            <h3> Cluedo App. Academic Project</h3>
+                            <p>This app simulate the famous Cluedo society game </p>
+                            <a href=""><i class="fa-solid fa-info"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="more-btn">See more</a>
+            </div>
+         </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
     </body>
 </html>
