--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet"
               href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CRoboto:regular,500"
               media="all">
-        <link rel="stylesheet" href="amina.css">
+        <link rel="stylesheet" href="portfolio/amina.css">
     </head>
     <body>
     <!--    Bare de navigation-->
@@ -33,7 +33,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar-toggler">
                     <a class="navbar-brand w-nav-brand" href="#">
-                        <img src="../img/logo.png"  alt="logo" class="image">
+                        <img src="img/logo.png" alt="logo" class="image">
                     </a>
                     <ul id="menu-list" class="navbar-nav d-flex justify-content-center align-items-center nav-menu w-nav-menu" >
                         <li class="nav-item">
@@ -80,7 +80,7 @@
 
             </div>
             <div class="right-block img-hero">
-                <img src="../img/profile.jpg" alt="profile">
+                <img src="img/profile.jpg" alt="profile">
             </div>
         </div>
         </div>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="d-flex flex-column align-items-center">
-                        <img class="rounded p-4" alt="CV" src="assets/img/cv.png"/>
+                        <img class="rounded p-4" alt="CV" src="portfolio/assets/img/cv.png"/>
                         <button class=" btn btn-dark" style="width: fit-content;"> Download PDF format</button>
 
                     </div>
