--- a/index.html
+++ b/index.html
@@ -322,6 +322,45 @@
             </div>
          </section>
     </div>
+    <!-- Resume section -->
+    <section id="contact" class="space-b-section section resume">
+        <div class="container container2">
+
+            <h2 class="section-title">Get in Touch</h2>
+            <div class="form-area">
+                <div class="row single-form g-0">
+                    <div class="col-sm-12 col-lg-6">
+                        <div class="form-left">
+                            <h2><span>Contact Me</span></h2>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-12 col-lg-6">
+                        <div class="form-right">
+                            <form>
+                                <div class="mb-3">
+                                    <label for="exampleInputEmail1" class="form-label">Your Name</label>
+                                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                    <div id="emailHelp" class="form-text"></div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleInputPassword1" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="exampleInputPassword1">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleInputPassword1" class="form-label">Message</label>
+                                    <textarea class="form-control" id="exampleInputPassword2"></textarea>
+                                </div>
+
+                                <button type="submit" class="btn more-btn">Submit</button>
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
     <!-- Template Main JS File -->
