--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <i class="navbar-toggler-icon"  ></i>
 
                 </button>
-                <button onclick="closeMenu()" id="close-icon"  class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="true" aria-label="Toggle navigation">
-                    <i class="fa-solid fa-xmark" id="close"> </i>
+<!--                <button onclick="closeMenu()" id="close-icon"  class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="true" aria-label="Toggle navigation">-->
+<!--                    <i class="fa-solid fa-xmark" id="close"> </i>-->
 
-                </button>
+<!--                </button>-->
                 <div class="collapse navbar-collapse" id="navbar-toggler">
                     <a class="navbar-brand w-nav-brand" href="#">
                         <img src="img/logo.png" alt="logo" class="image">
