--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             <div class="container container-fluid ">
                 <button id="burg-icon" class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="navbar-toggler-icon"  ></i>
-
                 </button>
 <!--                <button onclick="closeMenu()" id="close-icon"  class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="true" aria-label="Toggle navigation">-->
 <!--                    <i class="fa-solid fa-xmark" id="close"> </i>-->
@@ -37,19 +36,19 @@
                     </a>
                     <ul id="menu-list" class="navbar-nav d-flex justify-content-center align-items-center nav-menu w-nav-menu" >
                         <li class="nav-item">
-                            <a class="nav-link w-nav-link " aria-current="page" href="#about">About me</a>
+                            <a class="nav-link w-nav-link " aria-current="page" data-bs-target=".navbar-collapse.show" href="#about">About me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link w-nav-link"  href="#skills" onclick="closeMenu()">Skills</a>
+                            <a class="nav-link w-nav-link"   data-bs-target=".navbar-collapse.show" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link w-nav-link" href="#resume">Resume</a>
+                            <a class="nav-link w-nav-link"  data-bs-target=".navbar-collapse.show"  href="#resume">Resume</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link w-nav-link"  href="#portfolio">Portfolio</a>
+                            <a class="nav-link w-nav-link" data-bs-target=".navbar-collapse.show" href="#portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link-copy w-nav-link"  href="#">Email me</a>
+                            <a class="nav-link-copy w-nav-link" data-bs-target=".navbar-collapse.show" href="#contact">Email me</a>
                         </li>
                     </ul>
                 </div>
@@ -206,7 +205,7 @@
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="d-flex flex-column align-items-center">
-                        <img class="rounded p-4" alt="CV" src="portfolio/assets/img/cv.png"/>
+                        <img class="rounded p-4" alt="CV" src="assets/img/cv.png"/>
                         <button class=" btn btn-dark" style="width: fit-content;"> Download PDF format</button>
 
                     </div>
