--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     </div>
                 </div>
                 <div class="social">
-                    <div><i class="bi bi-linkedin"></i></div>
-                   <div><i class="bi bi-github" ></i></div>
+                    <div><a href="https://www.linkedin.com/in/aminatou-barry-15491512a"><i class="bi bi-linkedin"></i></a></div>
+                   <div><a href="https://github.com/AminaB"><i class="bi bi-github" ></i></a></div>
                 </div>
 
             </div>
