--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <meta name="author" content="Aminatou BARRY">
         <meta name="description" content="Portfolio web de Aminatou">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <!--favicon -->
@@ -17,6 +16,7 @@
               href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CRoboto:regular,500"
               media="all">
         <link rel="stylesheet" href="portfolio/amina.css">
+
     </head>
     <body>
     <!--    Bare de navigation-->
@@ -69,7 +69,7 @@
                     <h2 class="text">My name is <em><strong style="font-size: 1.3rem" > Aminatou BARRY</strong></em></h2>
                     <div  class="text-content" style=" ">
                         <div class="normal-title text">I am a</div>
-                        <div class="change-text"></div>
+                        <div class="typed change-text" ></div>
                     </div>
                 </div>
                 <div class="social">
@@ -206,24 +206,40 @@
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="d-flex flex-column align-items-center">
                         <img class="rounded p-4" alt="CV" src="assets/img/cv.png"/>
-                        <button class=" btn btn-dark" style="width: fit-content;"> Download PDF format</button>
-
+                        <button class=" btn btn-dark cv" style="width: fit-content;"><a style="" href="assets/CV_AminatouBARRY.pdf">Download PDF format</a></button>
                     </div>
                 </div>
             </div>
 
         </div>
     </section>
-
+    <!-- Formation and certification -->
+    <section id="formation" class="space-b-section section section-bg formation">
+        <div class="container container2">
+            <h2 class="section-title">Others trainings and Certifications</h2>
+            <p class="paragraph">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
+    </section>
     <!-- portfolio -->
 
     <div class="space-b-section">
          <section id="portfolio" class="portfolio section section-bg">
             <div class="container">
                 <h2 class="section-title">Portfolio</h2>
-                <div class="work-list">
-                    <div class="work">
-                        <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
+
+
+                <div class="row" data-aos="fade-up">
+                    <div class="col-lg-12 d-flex justify-content-center">
+                        <ul id="portfolio-flters">
+                            <li data-filter=".filter-app" class="filter-active">App</li>
+                            <li data-filter=".filter-web">Certifications</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="work-list" >
+                    <div class="work filter-app">
+                        <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
                         <div class="layer">
                             <h3> Cluedo App</h3>
                             <p>This app simulate the famous Cluedo society game. Spring Boot with JAVAFX </p>
@@ -253,8 +269,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="work">
-                        <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
+                    <div class="work filter-app">
+                        <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
                         <div class="layer">
                             <h3> Cluedo App. Academic Project</h3>
                             <p>This app simulate the famous Cluedo society game. Spring Boot with JAVAFX </p>
@@ -284,7 +300,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="work">
+                    <div class="work  filter-app">
                         <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
                         <div class="layer">
                             <h3> Cluedo App. Academic Project</h3>
@@ -292,7 +308,7 @@
                             <a href=""><i class="fa-solid fa-info"></i></a>
                         </div>
                     </div>
-                    <div class="work">
+                    <div class="work portfolio-item filter-app">
                         <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
                         <div class="layer">
                             <h3> Cluedo App. Academic Project</h3>
@@ -300,7 +316,7 @@
                             <a href=""><i class="fa-solid fa-info"></i></a>
                         </div>
                     </div>
-                    <div class="work">
+                    <div class="work  filter-app">
                         <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
                         <div class="layer">
                             <h3> Cluedo App. Academic Project</h3>
@@ -308,7 +324,7 @@
                             <a href=""><i class="fa-solid fa-info"></i></a>
                         </div>
                     </div>
-                    <div class="work">
+                    <div class="work  filter-web">
                         <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
                         <div class="layer">
                             <h3> Cluedo App. Academic Project</h3>
@@ -360,6 +376,15 @@
             </div>
         </div>
     </section>
+    <!-- Vendor JS Files -->
+
+
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+
+    <script src="assets/vendor/typed.js/typed.umd.js"></script>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
     <!-- Template Main JS File -->
