--- a/index.html
+++ b/index.html
@@ -227,16 +227,6 @@
             <div class="container">
                 <h2 class="section-title">Portfolio</h2>
 
-
-                <div class="row" data-aos="fade-up">
-                    <div class="col-lg-12 d-flex justify-content-center">
-                        <ul id="portfolio-flters">
-                            <li data-filter=".filter-app" class="filter-active">App</li>
-                            <li data-filter=".filter-web">Certifications</li>
-                        </ul>
-                    </div>
-                </div>
-
                 <div class="work-list" >
                     <div class="work filter-app">
                         <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
@@ -339,43 +329,42 @@
     </div>
     <!-- Resume section -->
     <section id="contact" class="space-b-section section resume">
-        <div class="container container2">
+        <div class="contact-wrap">
+            <div class="contact-in">
+                <h1>Contact Info</h1>
+                <h2><i class="fa fa-phone" aria-hidden="true"></i> Phone</h2>
+                <p>123-456-789</p>
+                <h2><i class="fa fa-envelope" aria-hidden="true"></i> Email</h2>
+                <p>info@democompany.com</p>
+                <h2><i class="fa fa-map-marker" aria-hidden="true"></i> Address</h2>
+                <p>Vasant Vihar, Delhi, India</p>
+                <ul>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
 
-            <h2 class="section-title">Get in Touch</h2>
-            <div class="form-area">
-                <div class="row single-form g-0">
-                    <div class="col-sm-12 col-lg-6">
-                        <div class="form-left">
-                            <h2><span>Contact Me</span></h2>
-                        </div>
+            <div class="contact-in">
 
-                    </div>
-                    <div class="col-sm-12 col-lg-6">
-                        <div class="form-right">
-                            <form>
-                                <div class="mb-3">
-                                    <label for="exampleInputEmail1" class="form-label">Your Name</label>
-                                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                    <div id="emailHelp" class="form-text"></div>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="exampleInputPassword1" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="exampleInputPassword1">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="exampleInputPassword1" class="form-label">Message</label>
-                                    <textarea class="form-control" id="exampleInputPassword2"></textarea>
-                                </div>
-
-                                <button type="submit" class="btn more-btn">Submit</button>
-                            </form>
-                        </div>
-
-                    </div>
-                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.0539944141774!2d1.9247353999999999!3d47.9159927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e4fb462eda3c2f%3A0xee92614ce72c3042!2s11%20Rue%20Ars%C3%A8ne%20Bourgeois%2C%2045000%20Orl%C3%A9ans!5e0!3m2!1sen!2sfr!4v1707816671874!5m2!1sen!2sfr" width="100%" height="auto" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
     </section>
+
+
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+        <div class="container">
+            <div class="copyright text">
+                &copy; Copyright Aminatou BARRY
+            </div>
+
+        </div>
+    </footer><!-- End  Footer -->
+
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     <!-- Vendor JS Files -->
 
 
