--- a/index.html
+++ b/index.html
@@ -333,11 +333,11 @@
             <div class="contact-in">
                 <h1>Contact Info</h1>
                 <h2><i class="fa fa-phone" aria-hidden="true"></i> Phone</h2>
-                <p>123-456-789</p>
+                <p>+33 754555558</p>
                 <h2><i class="fa fa-envelope" aria-hidden="true"></i> Email</h2>
-                <p>info@democompany.com</p>
+                <p>aminatou.barry97@gmail.com</p>
                 <h2><i class="fa fa-map-marker" aria-hidden="true"></i> Address</h2>
-                <p>Vasant Vihar, Delhi, India</p>
+                <p>11 Rue Arsène Bourgeois, Orléans</p>
                 <ul>
                     <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
