--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h1 class="section-title"> Who Am I?</h1>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6">
-                    <h2 class="section-title">&lt;About Me/&gt;</h2>
+                    <h2 class="section-title-about">&lt;About Me/&gt;</h2>
                    <p class="paragraph"> Greetings, thank you for visiting my website. I am Aminatou BARRY, I am a  <b>Developer</b> and  <b>DevOps Junior</b>.
                        I enjoy learning new things, my current challenge is to become a <b>DevOps Engineer</b>.
                        I like to code, in my previous job at  <b>Orange</b> company, my manager qualified me as <b>"Good appetite for coding"</b>.
@@ -402,7 +402,7 @@
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     <!-- Vendor JS Files -->
-
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
     <!-- Template Main JS File -->
