--- a/index.html
+++ b/index.html
@@ -391,16 +391,17 @@
 
 
     <!-- ======= Footer ======= -->
-    <footer id="footer">
+    <footer class="footer" id="footer">
         <div class="container">
             <div class="copyright text">
-                &copy; Copyright Aminatou BARRY
+                &#169 Copyright Aminatou BARRY. All right reserved
             </div>
 
         </div>
+        <a href="#"  class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
     </footer><!-- End  Footer -->
 
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     <!-- Vendor JS Files -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
