--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
     </section>
 
         <!-- ===========       Certification =========-->
-
+        <div class="space-b-section container">
+        <h1 class="section-title">Certifications</h1>
         <div class="container-swp">
             <div class="card-container swiper">
                 <div class="card-content">
@@ -275,7 +276,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <!-- Resume section -->
     <section id="resume" class="space-b-section section resume">
         <div class="container container2">
@@ -331,13 +332,7 @@
 
         </div>
     </section>
-    <!-- Formation and certification -->
-    <section id="formation" class="space-b-section section section-bg formation">
-        <div class="container container2">
-            <h2 class="section-title">Others trainings and Certifications</h2>
-            <p class="paragraph">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-    </section>
+
     <!-- portfolio -->
 
     <div class="space-b-section">
