fix certifications sections

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                        I like to code, in my previous job at  <b>Orange</b> company, my manager qualified me as <b>"Good appetite for coding"</b>.
                        I am also a mum, I like playing Mario Kart with my Kid and listening audiobooks, my current favorite is
                        <b>"Fils des Brumes"</b> of  <b>Brandon Sanderson</b>. I do fitness every week, I like seen good movie to movie theater,
-                       and eat a good meal at a restaurant with family or friends.
+                       and to eat a good meal at a restaurant with family or friends.
 
                    </p>
                     <img class="" src="assets/img/hobby.png" alt="img_about"/>
