Add Orsys certif

--- a/index.html
+++ b/index.html
@@ -203,12 +203,24 @@
                     <div class="swiper-wrapper">
                         <article class="card-article swiper-slide">
                             <div class="card-image">
+                                <img src="assets/img/certifs/aws_orsys.png" alt="card image" class="card-img">
+                                <div class="card-shadow"></div>
+                            </div>
+                            <div class="card-data">
+                                <h3 class="card-name">AWS Cloud Practitioner</h3>
+                                <p class="card-description">AWS cloud fundamentals </p>
+                                <a href="#" class="card-button"> view more</a>
+                            </div>
+
+                        </article>
+                        <article class="card-article swiper-slide">
+                            <div class="card-image">
                                 <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
                                 <div class="card-shadow"></div>
                             </div>
                             <div class="card-data">
                                 <h3 class="card-name">Terraform</h3>
-                                <p class="card-description">Terraform Beginners</p>
+                                <p class="card-description">Terraform beginners</p>
                                 <a href="#" class="card-button"> view more</a>
                             </div>
 
@@ -220,7 +232,7 @@
                             </div>
                             <div class="card-data">
                                 <h3 class="card-name">Devops : HandBook</h3>
-                                <p class="card-description">Devops Initiation</p>
+                                <p class="card-description">Devops initiation</p>
                                 <a href="#" class="card-button"> view more</a>
                             </div>
 
