--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <!--css -->
         <script src="https://kit.fontawesome.com/433d1c4f2e.js" crossorigin="anonymous"></script>
 
-        <link rel="stylesheet"
-              href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CRoboto:regular,500"
-              media="all">
+
         <link rel="stylesheet" href="portfolio/amina.css">
 
     </head>
@@ -181,7 +179,7 @@
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">DevOps : Terraform, aws Services, Azure AD B2C <i class="val">35%</i></span>
+                        <span class="skill">DevOps : Terraform, aws Services, Jenkins, Azure AD B2C <i class="val">35%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="50" style="width: 35%;"></div>
                         </div>
@@ -319,8 +317,8 @@
                         <h5>2021 - Present</h5>
                         <p><em>CNAV, Paris </em></p>
                         <ul>
-                            <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                            <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                            <li>I am in charge of all project pipeline, from translating functional specifications to delivery.</li>
+                            <li>I lead meeting with QA Team and scheduled delivery with GIP-MDS IT management team. </li>
                         </ul>
                     </div>
                     <div class="resume-item">
@@ -329,8 +327,13 @@
 
                         <p><em>UINC, Orange France</em></p>
                         <ul>
-                            <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                            <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                            <li>I worked on COCKPIT project.
+                                The purpose of this project is to put forward the performances of UINC services through a website.
+                            I worked with network service, management service,.. </li>
+                            <li>
+                                For this mission, I Extract data from Orange BIG DATA, and calculate many KPI's (key performance indicator) for each service.
+                                I present those indicators in the site with graphics.
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -387,28 +390,47 @@
                     <div class="work filter-app">
                         <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
                         <div class="layer">
-                            <h3> Cluedo App. Academic Project</h3>
-                            <p>This app simulate the famous Cluedo society game. Spring Boot with JAVAFX </p>
-                            <a href=""><i class="fa-solid fa-info more-info"></i></a>
+                            <h3> DSNVAL App.  </h3>
+                            <p>It is a standard control tool . </p>
+                            <p>This software check if a DSN is a valid one. </p>
+                            <p>A DSN is a document comes out every month from company,
+                                that document content information about the company,
+                                their employers, their contract, and all contributions (health insurance, pension plan,..) </p>
+                            <a class="more-info"><i class="fa-solid fa-info"></i></a>
                             <div class="work-info" >
                                 <div class="work-info-content">
                                     <i class="fa-solid fa-circle-xmark work-info-close"></i>
-                                    <h2 class="work-info-title">Cluedo App</h2>
+                                    <h2 class="work-info-title">DSNVAL APP</h2>
                                     <ul class="work-info-list grid">
                                         <li class="work-info-list-item">
-                                            This project is an academic project, done by 4 students.
+                                            This Project is a property of CNAV Company. It is free to use.
+                                        </li>
+
+                                        <li class="work-info-list-item">
+                                            Workflow :
+                                            <ol>
+                                                <li>
+                                                    Translating functional specs to technical and send it to GIP-MDS.
+                                                </li>
+                                                <li>
+                                                    Coding functionalities and test them.
+                                                </li>
+                                                <li>
+                                                    Generating delivery on jenkins.
+                                                </li>
+                                                <li>
+                                                    Sending packages to QA team of GIM-MDS.
+                                                </li>
+                                            </ol>
                                         </li>
                                         <li class="work-info-list-item">
-                                            Front : JavaFX.
+                                            GIP-MDS : my final client, you can read more about them  <a href="https://www.gip-mds.fr/">here</a>
                                         </li>
                                         <li class="work-info-list-item">
-                                            Back : Spring boot project with Rest Api.
+                                            Technology : java, Saturne (CNAV property), Jenkins, XML, HTML/CSS (for software documentation).
                                         </li>
                                         <li class="work-info-list-item">
-                                            Proxy : to link the back to the front (Gateway with Java HttpRequest).
-                                        </li>
-                                        <li class="work-info-list-item">
-                                            DB : docker-compose pull a mongoDb image.
+                                            Link to download software : <a href="https://www.net-entreprises.fr/declaration/outils-de-controle-dsn-val/">click here</a>.
                                         </li>
                                     </ul>
                                 </div>
