--- a/index.html
+++ b/index.html
@@ -437,12 +437,85 @@
                             </div>
                         </div>
                     </div>
+                    <div class="work filter-app">
+                        <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
+                        <div class="layer">
+                            <h3> PASRAUVAL App.  </h3>
+                            <p>It is a standard control tool . </p>
+                            <p>This software check if a tax deduction is a valid on a DSN. </p>
+                            <p>A DSN is a document comes out every month from company,
+                                that document content information about the company,
+                                their employers, their contract, taxes, and all contributions (health insurance, pension plan,..) </p>
+                            <a class="more-info"><i class="fa-solid fa-info"></i></a>
+                            <div class="work-info" >
+                                <div class="work-info-content">
+                                    <i class="fa-solid fa-circle-xmark work-info-close"></i>
+                                    <h2 class="work-info-title">PASRAUVAL APP</h2>
+                                    <ul class="work-info-list grid">
+                                        <li class="work-info-list-item">
+                                            This Project is a property of CNAV Company. It is free to use.
+                                        </li>
+
+                                        <li class="work-info-list-item">
+                                            Workflow :
+                                            <ol>
+                                                <li>
+                                                    Translating functional specs to technical and send it to GIP-MDS.
+                                                </li>
+                                                <li>
+                                                    Coding functionalities and test them.
+                                                </li>
+                                                <li>
+                                                    Generating delivery on jenkins.
+                                                </li>
+                                                <li>
+                                                    Sending packages to QA team of GIM-MDS.
+                                                </li>
+                                            </ol>
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            GIP-MDS : my final client, you can read more about them  <a href="https://www.gip-mds.fr/">here</a>
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Technology : java, Saturne (CNAV property), Jenkins, XML, HTML/CSS (for software documentation).
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Link to download software : <a href="https://www.net-entreprises.fr/declaration/outil-pasrau-val/">click here</a>.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="work  filter-app">
                         <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
                         <div class="layer">
                             <h3> Cluedo App. Academic Project</h3>
                             <p>This app simulate the famous Cluedo society game </p>
-                            <a href=""><i class="fa-solid fa-info"></i></a>
+                            <a class="more-info"><i class="fa-solid fa-info"></i></a>
+                            <div class="work-info" >
+                                <div class="work-info-content">
+                                    <i class="fa-solid fa-circle-xmark work-info-close"></i>
+                                    <h2 class="work-info-title">Cluedo App</h2>
+                                    <ul class="work-info-list grid">
+                                        <li class="work-info-list-item">
+                                            This project is an academic project, done by 4 students.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Front : JavaFX.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Back : Spring boot project with Rest Api.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Proxy : to link the back to the front (Gateway with Java HttpRequest).
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            DB : docker-compose pull a mongoDb image.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="work portfolio-item filter-app">
@@ -450,7 +523,30 @@
                         <div class="layer">
                             <h3> Cluedo App. Academic Project</h3>
                             <p>This app simulate the famous Cluedo society game </p>
-                            <a href=""><i class="fa-solid fa-info"></i></a>
+                            <a class="more-info"><i class="fa-solid fa-info"></i></a>
+                            <div class="work-info" >
+                                <div class="work-info-content">
+                                    <i class="fa-solid fa-circle-xmark work-info-close"></i>
+                                    <h2 class="work-info-title">Cluedo App</h2>
+                                    <ul class="work-info-list grid">
+                                        <li class="work-info-list-item">
+                                            This project is an academic project, done by 4 students.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Front : JavaFX.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Back : Spring boot project with Rest Api.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Proxy : to link the back to the front (Gateway with Java HttpRequest).
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            DB : docker-compose pull a mongoDb image.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="work  filter-app">
@@ -458,17 +554,33 @@
                         <div class="layer">
                             <h3> Cluedo App. Academic Project</h3>
                             <p>This app simulate the famous Cluedo society game </p>
-                            <a href=""><i class="fa-solid fa-info"></i></a>
+                            <a class="more-info"><i class="fa-solid fa-info"></i></a>
+                            <div class="work-info" >
+                                <div class="work-info-content">
+                                    <i class="fa-solid fa-circle-xmark work-info-close"></i>
+                                    <h2 class="work-info-title">Cluedo App</h2>
+                                    <ul class="work-info-list grid">
+                                        <li class="work-info-list-item">
+                                            This project is an academic project, done by 4 students.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Front : JavaFX.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Back : Spring boot project with Rest Api.
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            Proxy : to link the back to the front (Gateway with Java HttpRequest).
+                                        </li>
+                                        <li class="work-info-list-item">
+                                            DB : docker-compose pull a mongoDb image.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="work  filter-web">
-                        <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
-                        <div class="layer">
-                            <h3> Cluedo App. Academic Project</h3>
-                            <p>This app simulate the famous Cluedo society game </p>
-                            <a href=""><i class="fa-solid fa-info"></i></a>
-                        </div>
-                    </div>
+
                 </div>
                 <a href="#" class="more-btn">See more</a>
             </div>
