Portfolio : fix work-info-content height

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                             <p>This software check if a tax deduction is a valid on a DSN. </p>
                             <p>A DSN is a document comes out every month from company,
                                 that document content information about the company,
-                                their employers, their contract, taxes, and all contributions (health insurance, pension plan,..) </p>
+                                their employers, taxes,... </p>
                             <a class="more-info"><i class="fa-solid fa-info"></i></a>
                             <div class="work-info" >
                                 <div class="work-info-content">
@@ -490,13 +490,14 @@
                     <div class="work  filter-app">
                         <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
                         <div class="layer">
-                            <h3> Cluedo App. Academic Project</h3>
-                            <p>This app simulate the famous Cluedo society game </p>
+                            <h3> Sending Money App. Minimal version</h3>
+                            <p>This app is a sending money app, I have done it for a friend. </p>
                             <a class="more-info"><i class="fa-solid fa-info"></i></a>
                             <div class="work-info" >
                                 <div class="work-info-content">
                                     <i class="fa-solid fa-circle-xmark work-info-close"></i>
                                     <h2 class="work-info-title">Cluedo App</h2>
+
                                     <ul class="work-info-list grid">
                                         <li class="work-info-list-item">
                                             This project is an academic project, done by 4 students.
