Portfolio : BisAgriFarm, sending money app

--- a/index.html
+++ b/index.html
@@ -491,28 +491,24 @@
                         <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
                         <div class="layer">
                             <h3> Sending Money App. Minimal version</h3>
-                            <p>This app is a sending money app, I have done it for a friend. </p>
+                            <p>This App is for one user, my friend wanted to have a backup of his transactions.
+                                He can create a transaction, generate a picture of it to send to his client,
+                                and he can also find previous transactions, and modify them.</p>
                             <a class="more-info"><i class="fa-solid fa-info"></i></a>
                             <div class="work-info" >
                                 <div class="work-info-content">
                                     <i class="fa-solid fa-circle-xmark work-info-close"></i>
-                                    <h2 class="work-info-title">Cluedo App</h2>
+                                    <h2 class="work-info-title">Sending Money App</h2>
 
                                     <ul class="work-info-list grid">
                                         <li class="work-info-list-item">
-                                            This project is an academic project, done by 4 students.
+                                            This app is a backup for sending money transactions, I have done it for a friend.
                                         </li>
                                         <li class="work-info-list-item">
-                                            Front : JavaFX.
+                                            DB : FireBase.
                                         </li>
                                         <li class="work-info-list-item">
-                                            Back : Spring boot project with Rest Api.
-                                        </li>
-                                        <li class="work-info-list-item">
-                                            Proxy : to link the back to the front (Gateway with Java HttpRequest).
-                                        </li>
-                                        <li class="work-info-list-item">
-                                            DB : docker-compose pull a mongoDb image.
+                                            Framework : Flutter, Dart.
                                         </li>
                                     </ul>
                                 </div>
@@ -522,59 +518,24 @@
                     <div class="work portfolio-item filter-app">
                         <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
                         <div class="layer">
-                            <h3> Cluedo App. Academic Project</h3>
-                            <p>This app simulate the famous Cluedo society game </p>
+                            <h3> Intelligent and Precise Agriculture App</h3>
+                            <p>This project have been canceled by client, but I had already coded the user interfaces
+                                This app is designed to help people monitor and control various factors in their agricultural setup,
+                                allowing them to maximize crop yield and efficiency</p>
                             <a class="more-info"><i class="fa-solid fa-info"></i></a>
                             <div class="work-info" >
                                 <div class="work-info-content">
                                     <i class="fa-solid fa-circle-xmark work-info-close"></i>
-                                    <h2 class="work-info-title">Cluedo App</h2>
+                                    <h2 class="work-info-title">Precise Agriculture App</h2>
                                     <ul class="work-info-list grid">
                                         <li class="work-info-list-item">
-                                            This project is an academic project, done by 4 students.
+                                            The client of this app have a Ph.D. in Electronics Engineering. Research on smart agriculture
                                         </li>
                                         <li class="work-info-list-item">
-                                            Front : JavaFX.
+                                            DB : FireBase.
                                         </li>
                                         <li class="work-info-list-item">
-                                            Back : Spring boot project with Rest Api.
-                                        </li>
-                                        <li class="work-info-list-item">
-                                            Proxy : to link the back to the front (Gateway with Java HttpRequest).
-                                        </li>
-                                        <li class="work-info-list-item">
-                                            DB : docker-compose pull a mongoDb image.
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="work  filter-app">
-                        <img src="assets/img/portfolio/portfolio-1.jpg" alt=""/>
-                        <div class="layer">
-                            <h3> Cluedo App. Academic Project</h3>
-                            <p>This app simulate the famous Cluedo society game </p>
-                            <a class="more-info"><i class="fa-solid fa-info"></i></a>
-                            <div class="work-info" >
-                                <div class="work-info-content">
-                                    <i class="fa-solid fa-circle-xmark work-info-close"></i>
-                                    <h2 class="work-info-title">Cluedo App</h2>
-                                    <ul class="work-info-list grid">
-                                        <li class="work-info-list-item">
-                                            This project is an academic project, done by 4 students.
-                                        </li>
-                                        <li class="work-info-list-item">
-                                            Front : JavaFX.
-                                        </li>
-                                        <li class="work-info-list-item">
-                                            Back : Spring boot project with Rest Api.
-                                        </li>
-                                        <li class="work-info-list-item">
-                                            Proxy : to link the back to the front (Gateway with Java HttpRequest).
-                                        </li>
-                                        <li class="work-info-list-item">
-                                            DB : docker-compose pull a mongoDb image.
+                                            Framework : Flutter, Dart.
                                         </li>
                                     </ul>
                                 </div>
@@ -583,7 +544,7 @@
                     </div>
 
                 </div>
-                <a href="#" class="more-btn">See more</a>
+<!--                <a href="#" class="more-btn">See more</a>-->
             </div>
          </section>
     </div>
