view more certif button

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <div class="card-data">
                                 <h3 class="card-name">AWS Cloud Practitioner</h3>
                                 <p class="card-description">AWS cloud fundamentals </p>
-                                <a href="#" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/aws_orsys.png" class="card-button"> view more</a>
                             </div>
 
                         </article>
@@ -219,7 +219,7 @@
                             <div class="card-data">
                                 <h3 class="card-name">Terraform</h3>
                                 <p class="card-description">Terraform beginners</p>
-                                <a href="#" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/terraform.jpg" class="card-button"> view more</a>
                             </div>
 
                         </article>
@@ -231,7 +231,8 @@
                             <div class="card-data">
                                 <h3 class="card-name">Devops : HandBook</h3>
                                 <p class="card-description">Devops initiation</p>
-                                <a href="#" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/devops1.jpg" class="card-button"> view more</a>
+
                             </div>
 
                         </article>
@@ -243,7 +244,8 @@
                             <div class="card-data">
                                 <h3 class="card-name">Devops : practice</h3>
                                 <p class="card-description">Practice Devops CI/CD with Git, Jenkins, Ansible, Kubernetes </p>
-                                <a href="#" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/devops2.jpg" class="card-button"> view more</a>
+
                             </div>
 
                         </article>
@@ -255,7 +257,8 @@
                             <div class="card-data">
                                 <h3 class="card-name">Devops : practice</h3>
                                 <p class="card-description">Practice Devops CI/CD with Jenkins, Maven, Gradle </p>
-                                <a href="#" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/devops3.jpg" class="card-button"> view more</a>
+
                             </div>
 
                         </article>
@@ -267,7 +270,8 @@
                             <div class="card-data">
                                 <h3 class="card-name">Devops : practice with AWS</h3>
                                 <p class="card-description">Practice Devops CI/CD with AWS, Jenkins, Docker, Ansible Gradle </p>
-                                <a href="#" class="card-button"> view more</a>
+                                <a href="assets/img/certifs/devops4_aws.jpg" class="card-button"> view more</a>
+
                             </div>
 
                         </article>
@@ -390,7 +394,7 @@
                     <div class="work filter-app">
                         <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
                         <div class="layer">
-                            <h3> DSNVAL App.  </h3>
+                            <h3> DSNVAL App  </h3>
                             <p>It is a standard control tool . </p>
                             <p>This software check if a DSN is a valid one. </p>
                             <p>A DSN is a document comes out every month from company,
@@ -440,7 +444,7 @@
                     <div class="work filter-app">
                         <img src="assets/img/portfolio/portfolio-3.jpg" alt=""/>
                         <div class="layer">
-                            <h3> PASRAUVAL App.  </h3>
+                            <h3> PASRAUVAL App  </h3>
                             <p>It is a standard control tool . </p>
                             <p>This software check if a tax deduction is a valid on a DSN. </p>
                             <p>A DSN is a document comes out every month from company,
